docs: add tip for discovering CLI time-delay features
Guides users to run 'fritz-mcp --help' in their AI agent to discover
comprehensive CLI usage including time-delayed action examples.

--- a/README.adoc
+++ b/README.adoc
@@ -409,6 +409,13 @@ Praktische Anwendungsfälle:
 
 Dieses Beispiel zeigt eine Funktion die keine GUI jemals bieten kann: Zeitgesteuerte Netzwerk-Aktionen mit natürlicher Sprache.
 
+[TIP]
+====
+To enable time-delayed features in your AI agent, run: `fritz-mcp --help`
+
+This displays comprehensive CLI usage examples including at/cron integration.
+====
+
 Prompt:
 [source,text]
 ----
