docs: consolidate to README.adoc and update license
- Remove README.md (pointed to private fritz-mcp repo incorrectly)
- Keep README.adoc as primary user-facing documentation
- Add LICENSE file with complete terms
- Update license section in README.adoc to match LICENSE

README.adoc contains comprehensive user documentation for the
public fritzbox-mcp-server repo (binaries + user docs).
Private fritz-mcp repo contains source code + dev docs.

--- a/README.adoc
+++ b/README.adoc
@@ -518,9 +518,11 @@ If you encounter permission errors, verify:
 
 == License
 
-Business Source License 1.1 - See LICENSE file for details
+Copyright (c) 2025 Kambrium Software GmbH. All Rights Reserved.
 
-Change License: Apache License 2.0 (effective 2028-11-25)
+Free for personal use (single FRITZ!Box). Commercial use requires licensing.
+
+See LICENSE file for complete terms.
 
 == Disclaimer
 
